##Release 1.5.0 Features##

The 1.5.0 release is available for download from https://docs.hpcloud.com/file/hpcloud-1.5.0.gem.  This release was made available on 1/18/2013 and contains the following new features:

* A new `complete` command attempts to install a bash completion file so you can tab complete hpcloud commands

###Known Issues###

* None at this time

##Release 1.4.0 Features##

The 1.4.0 release is available for download from https://docs.hpcloud.com/file/hpcloud-1.4.0.gem.  This release was made available on 12/11/2012 and contains the following new features:

* Command `servers:console` added to display the console of a server
* Command `servers:ssh` added to allow you to log in via secure shell to a server
* Command `keypairs:private` added to display the private keys known to the CLI
* Command `keypairs:private` added to display the private keys known to the CLI
* Command `keypairs:private:add` added to allow you to add a private key pair to the CLI
* Command `keypairs:private:location` added to display the physical location of a private key file
* Command `keypairs:private:remove` added to allow you to remove a private key
* Command `account:verify` added to allow you to verify an account file
* Command `account:edit` and `account:update` commands combined

###Known Issues###

* When the `-o` option is used to `keypairs:add` the private key is now stored in `~/.hpcloud/keypairs` directory instead of the current directory.

##Release 1.3.0 Features##

This release was made available on 12/6/2012 and contains the following new features:

* Command `servers:rebuild` added
* Option `-m` added to the `copy` command to allow you to override the mime type
* Option `-s` added to the `cdn:containers:location` command to print the SSL and non-SSL URLs for CDN objects
* Commands `cdn:containers:add` and `cdn:containers:remove` now accept multiple arguments
* CLI help text significantly updated
* Default account can be set to any configured account