@@ -56,6 +56,7 @@ require 'hpcloud/commands/keypairs'
 require 'hpcloud/commands/list'
 require 'hpcloud/commands/location'
 require 'hpcloud/commands/info'
+require 'hpcloud/commands/migrate'
 require 'hpcloud/commands/move'
 require 'hpcloud/commands/remove'
 require 'hpcloud/commands/servers'
