@@ -3,6 +3,10 @@
 The 1.5.0 release is available for download from https://docs.hpcloud.com/file/hpcloud-1.5.0.gem.  This release was made available on 1/18/2013 and contains the following new features:
 
 * A new `complete` command attempts to install a bash completion file so you can tab complete hpcloud commands
+* Added the `--debug` option to most commands to produce verbose trace
+* Added the `--source-account` option to the `copy` command so that files may be copied from one account to another.
+* New `migrate` command for object store migration from different providers.
+* The account:setup command has a new `--provider` option to supply providers other than HP for migration.
 
 ###Known Issues###
 
